<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ActivityMenu"
    android:background="@drawable/background_gradient_blue">
    <LinearLayout
        android:id="@+id/activity_menu__lnr_lt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/activity_menu__bt_online_game"
            style="@style/button_menu"
            android:text="@string/activity_menu__bt_online_game"
            />
        <Button
            android:id="@+id/activity_menu__bt_joint_game"
            style="@style/button_menu"
            android:text="@string/activity_menu__bt_joint_game"

            />
        <Button
            android:id="@+id/activity_menu__bt_bot_game"
            style="@style/button_menu"
            android:text="@string/activity_menu__bt_bot_game"

            />
        <Button
            android:id="@+id/activity_menu__bt_friends"
            style="@style/button_menu"
            android:text="@string/activity_menu__bt_friends"
            android:visibility="gone"

            />
        <Button
            android:id="@+id/activity_menu__bt_shop"
            style="@style/button_menu"
            android:text="@string/activity_menu__bt_shop"
            android:visibility="gone"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/airplane_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_airplane_1"
        app:layout_constraintBottom_toTopOf="@id/activity_menu__lnr_lt"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        />

    <ImageView
        android:id="@+id/airplane_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_airplane_2"
        app:layout_constraintTop_toBottomOf="@id/activity_menu__lnr_lt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        />
    <FrameLayout
        android:id="@+id/activity_menu__frm_lt_mascot_online_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintDimensionRatio="W,206:356"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_menu__lnr_lt"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mascot_legs_and_hands"/>
        <ImageView
            android:id="@+id/activity_menu__img_v_online_mascot_backg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mascot_backg"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mascot_body"/>
        <ImageView
            android:id="@+id/activity_menu__img_v_online_mascot_index_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/activity_menu__img_v_online_mascot_index_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/activity_menu__img_v_online_mascot_index_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/activity_menu__img_v_online_mascot_index_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>