<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:id="@+id/activity_registration__sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_bt"
            android:fontFamily="@font/gost_type"
            android:text="@string/activity_registration__sign_in"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/activity_registration__sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_bt"
            android:fontFamily="@font/gost_type"
            android:text="@string/activity_registration__bt_registration"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="30sp" />
        <Button
            android:id="@+id/activity_registration__google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_bt_google"
            android:fontFamily="@font/gost_type"
            android:textColor="@color/black"
            android:text="@string/activity_registration__bt_google"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="30sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>