<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_setings"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/activity_settings_game_one_on_one__edt_txt_first_name_user"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_elements"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/style_stroke_corners_green"
        android:fontFamily="@font/gost_type"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="@dimen/size_text"
        android:layout_marginBottom="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@id/activity_settings_game_one_on_one__edt_txt_second_name_user"/>
    <EditText
        android:id="@+id/activity_settings_game_one_on_one__edt_txt_second_name_user"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_elements"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/style_stroke_corners_green"
        android:fontFamily="@font/gost_type"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="@dimen/size_text"
        android:layout_marginBottom="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@id/activity_settings_game_one_on_one__lnr_lt_size_pole"/>
    <LinearLayout
        android:id="@+id/activity_settings_game_one_on_one__lnr_lt_size_pole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ic_spinner_background"
        app:layout_constraintBottom_toTopOf="@id/activity_settings_game_one_on_one__lnr_lt_time_for_turn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_between_elements"

        >
        <TextView
            android:layout_width="225dp"
            android:layout_height="@dimen/height_elements"
            android:text="@string/activity_settings_game_one_on_one__size_pole"
            android:fontFamily="@font/gost_type"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="@dimen/size_text"
            >
        </TextView>
        <Spinner
            android:id="@+id/activity_settings_game_one_on_one_spinner_size_pole"
            android:layout_width="75dp"
            android:layout_height="@dimen/height_elements"
            android:background="@drawable/style_stroke_corners_green"
            android:popupBackground="@drawable/style_solid_stroke_corners_geen"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_settings_game_one_on_one__lnr_lt_time_for_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ic_spinner_background"
        app:layout_constraintBottom_toTopOf="@id/activity_settings_game_one_on_one__frm_lt_start_word"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/margin_between_elements"
        >
        <TextView
            android:layout_width="225dp"
            android:layout_height="@dimen/height_elements"
            android:text="@string/activity_settings_game_one_on_one__time_for_turn"
            android:fontFamily="@font/gost_type"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="@dimen/size_text"
            >
        </TextView>
        <Spinner
            android:id="@+id/activity_settings_game_one_on_one__spinner_time_for_turn"
            android:layout_width="75dp"
            android:layout_height="@dimen/height_elements"
            android:background="@drawable/style_stroke_corners_green"
            android:popupBackground="@drawable/style_solid_stroke_corners_geen"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/activity_settings_game_one_on_one__frm_lt_start_word"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ic_et_background"
        android:layout_marginBottom="@dimen/margin_between_elements">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_elements"
            android:text="@string/activity_settings_game_one_on_one__start_word"
            android:fontFamily="@font/gost_type"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="@dimen/size_text"/>
        <EditText
            android:id="@+id/activity_settings_game_one_on_one__edt_txt_start_word"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_elements"
            android:fontFamily="@font/gost_type"
            android:textSize="@dimen/size_text"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/style_stroke_corners_green"
            android:height="@dimen/height_elements"
            android:layout_gravity="bottom"/>
    </FrameLayout>
    <Button
        android:id="@+id/activity_settings_game_one_on_one__bt_random_word"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_elements"
        android:text="@string/activity_settings_game_one_on_one__random_word"
        android:fontFamily="@font/gost_type"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="@dimen/size_text"
        android:background="@drawable/style_bt_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_game_one_on_one__frm_lt_start_word"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        />
    <Button
        android:id="@+id/activity_settings_game_one_on_one__bt_begin"
        android:layout_width="200dp"
        android:layout_height="@dimen/height_elements"
        android:text="@string/activity_settings_game_one_on_one__begin"
        android:fontFamily="@font/gost_type"
        android:gravity="center"
        android:textSize="@dimen/size_text"
        android:background="@drawable/style_bt_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_game_one_on_one__bt_random_word"
        android:layout_marginTop="@dimen/height_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"/>
</androidx.constraintlayout.widget.ConstraintLayout>